--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -34,6 +34,18 @@
     margin-bottom: 50px;
 }
 
+.contactHero{
+    width: 50%;
+    height: 500px;
+    margin: 0 auto;
+    background-image: url(../images/gallery/1.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
 .homeHeader{
     width: 50%;
     height: 50px;
